Provide a better link to import gradients from PS

--- a/app/views/gradients/index.html.haml
+++ b/app/views/gradients/index.html.haml
@@ -1,5 +1,4 @@
 %h1 Color Schemes
-= link_to "Import color schemes", new_grd_import_path
 .row
   - @named_gradients.each do |named_gradient|
     .col-md-6.col-sm-6
@@ -8,3 +7,8 @@
           %h3.panel-title= named_gradient.name
         .panel-body{ style: named_gradient.gradient.to_css + "height:100px;" }
 
+.row
+  .col-md-12
+    = link_to new_grd_import_path, class: "btn btn-default" do
+      %span.glyphicon.glyphicon-cloud-upload
+      = "Import color schemes from Adobe Photoshop"
