--- a/app/views/gradients/new.html.haml
+++ b/app/views/gradients/new.html.haml
@@ -1,17 +1,11 @@
-%h1 Choose which gradients to save
+.page-header
+  %h1 Choose which gradients to save
 .row
-  = simple_form_for @gradients_form, url: gradients_path do |f|
-    - @gradients_form.gradient_forms.each_with_index do |gradient_form, idx|
-      - key = [:gradients_form, :gradient_form, idx]
-      = f.simple_fields_for "gradient_forms[]", gradient_form do |ff|
-        = ff.input :points, as: :hidden
-        .col-md-6.col-sm-6
-          .panel.panel-default
-            .panel-body{ style: gradient_form.gradient.to_css + "height:100px;" }
-            .panel-footer
-              .form-group
-                = ff.input :name, input_html: { id: (key + [:name]).join("_") }, label: false
-                = ff.input :save, as: :boolean, input_html: { id: (key + [:save]).join("_") }, label: content_tag(:strong, "Save gradient to database").html_safe
+  - @gradient_forms.each_with_index do |gradient_form, idx|
+    = render "components/gradient_form", gradient_form: gradient_form
 
-    .col-md-12.col-sm-12.text-right
-      = submit_tag "Save gradients", class: "btn btn-primary"
+.row
+  .col-md-12.text-right
+    = link_to gradients_path, class: "btn btn-default" do
+      %span.glyphicon.glyphicon-th-large
+      = "List all saved gradients"
